bug 1325097: Make columns more visible in editor
Updated the twocolumns and threecolumns classes so they draw with a pale
blue dotted border around the columns when in the editor, for ease of
layout work. The format is in a variable ($editor-box-border) so it can
be reused in other similar cases if needed.

--- a/kuma/static/styles/components/content.scss
+++ b/kuma/static/styles/components/content.scss
@@ -277,10 +277,20 @@ p.footnote {
 
 /* Classes created by the WYSIWYG */
 .twocolumns {
-   @include vendorize(column-count, 2);
+    @include vendorize(column-count, 2);
+
+    body[contenteditable] & {
+        border: $editor-box-border;
+        column-rule: $editor-box-border;
+    }
 }
 .threecolumns {
-   @include vendorize(column-count, 3);
+    @include vendorize(column-count, 3);
+
+    body[contenteditable] & {
+        border: $editor-box-border;
+        column-rule: $editor-box-border;
+    }
 }
 
 @media #{$media-query-small-mobile} {
